--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Unsocial Media is a small web server that can be administrated by people without technical skills",
   "main": "index.js",
   "scripts": {
+    "babel": "npx babel --presets @babel/preset-react ./public/react-index.js -o ./public/transpiled-index.js",
+    "build": "webpack --mode production",
     "dev": "nodemon ./express/express.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,11 +24,21 @@
   },
   "homepage": "https://github.com/tonydiethelm/unsocial-media#readme",
   "dependencies": {
+    "babel-loader": "^9.1.0",
+    "css-loader": "^6.7.2",
     "express": "^4.18.2",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@tonydiethelm/holler": "^1.0.6",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "webpack-cli": "^5.0.0"
   }
 }
