--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unsocial-media",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Unsocial Media is a small web server that can be administrated by people without technical skills",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "express": "^4.18.2",
+    "fs-promise": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.1",
